# gesha

./: .gitignore  LICENSE  README.md  cart_preferences.txt  cifail.txt  debug_1.txt  debug_15.txt  debug_76.html  debug_76.json  debug_76.txt  debug_8.txt  gesha.db.bak  pyproject.toml  requirements.txt  roaster_list.md  traffic collection.json
.github/workflows/: ci.yml
assets/: roaster_list.md
gesha/: __init__.py  cart.py  coffee_data.py  coffee_service.py  measurements.py  normalization.py  shipping.py
gesha/cli/: __init__.py  main.py
gesha/db/: __init__.py  models.py  session.py
gesha/models/: coffee.py
gesha/normalization/: normalize.py
gesha/parsers/: __init__.py  common.py  demello_parser.py  hatch_parser.py  traffic_parser.py
gesha/scrapers/: __init__.py  base.py  base_scraper.py  demello.py  hatch.py  hatch_scraper.py  shopify.py  shopify_children_scrapers.py  shopify_scraper.py  traffic.py
gesha/services/: __init__.py  coffee_service.py
tests/: test_cart.py  test_cli.py  test_coffee_service.py  test_common_product_facts.py  test_demello_parser.py  test_hatch_parser.py  test_hatch_scraper.py  test_measurements.py  test_models.py  test_normalization.py  test_scraper_registry.py  test_shipping.py  test_shopify_scraper.py  test_traffic_parser.py  test_traffic_scraper.py
